refactoring + dark mode

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,6 @@
-/* .anim {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-} */
+
+@media (max-width: 600px) {
+    .responsive-text {
+        font-size: 2.8rem;
+    }
+}
